--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -418,7 +418,7 @@
         display: none;
         position: absolute;
         height: 100vh;
-        width: 100%;
+        width: 100vw;
         left: 0;
         top: 0;
         background-color:#000;
